// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`web component: Input should have right properties 1`] = `
LoadedCheerio {
  "0": <input
    class="input class-name  "
    disabled=""
    enterkeyhint="done"
    maxlength="100"
    name=""
    placeholder="hello"
    style="color: red;"
    type="password"
    value="hello"
  />,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`web component: Input should render correctly 1`] = `
LoadedCheerio {
  "0": <input
    class="input   "
    enterkeyhint="done"
    maxlength="140"
    name=""
    type="text"
    value=""
  />,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
